# wap-client

./: .env.example  .gitignore  .gitlab-ci.yml  README copy.md  README.md  composer.json  docker-compose.yml  wap-client.php
assets/: wap-chat.css  wap-chat.js
docs/: README.md  admin-ui.md  agent-management.md  architecture.md  data-flows.md  integrating-a-product.md  local-development.md  openapi.yaml  playwright_mcp.md
includes/: class-api-client.php  class-app-password-manager.php  class-chat-widget.php  class-gdpr-handler.php
kubernetes/: README.md  generate-yaml.sh  print-env.sh
kubernetes/production/: configmap.yaml  deployment.yaml  ingress-internal.yaml  ingress-public.yaml  sealed-secret-app.yaml  sealed-secret-postgres.yaml
kubernetes/staging/: configmap.yaml  deployment.yaml  networkpolicy.yaml  sealed-secret-app.yaml  sealed-secret-postgres.yaml
kubernetes/test/: configmap.yaml  deployment.yaml  secret-app.yaml  secret-postgres.yaml  service.yaml
py-backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  seed.py
py-backend/alembic/: env.py
py-backend/alembic/versions/: 0001_initial_schema.py  0002_production_schema.py  0003_drop_audit_logs.py  0004_admin_users.py  0005_site_allowlist.py
py-backend/app/: config.py  dependencies.py  main.py  state.py
py-backend/app/agents/: single_agent.py
py-backend/app/db/: database.py  models.py
py-backend/app/lib/: agent_pubsub.py  encryption.py  observability.py  password.py  request_context.py  sse.py  text.py  tools.py
py-backend/app/middleware/: session_auth.py
py-backend/app/routes/: admin.py  admin_chat.py  admin_ui.py  auth.py  chat.py  health.py  me.py
py-backend/app/services/: admin_session_service.py  agent_registry.py  license_verifier.py  rate_limiter.py  session_bootstrap.py  session_service.py  site_allowlist_service.py  summarizer.py  wp_connection_service.py
py-backend/app/templates/admin/: agents.html  allowlist.html  base.html  chat.html  login.html  roles.html  snippets.html
py-backend/app/templates/admin/partials/: agent_form.html
py-backend/scripts/: create_admin_user.py  sync_wap_client_assets.sh
py-backend/tests/: conftest.py  test_agent_registry.py  test_database.py  test_encryption.py  test_license_verifier.py  test_observability.py  test_password.py  test_rate_limiter.py  test_routes_admin_chat.py  test_routes_auth.py  test_routes_chat.py  test_routes_health.py  test_routes_me.py  test_session_service.py  test_single_agent.py  test_site_allowlist.py  test_summarizer.py  test_tools.py  test_wp_connection_service.py
wp-client-plugin/: wap-test-client.php
wp-client-plugin/admin/: chat.php  settings.php
wp-client-plugin/assets/: chat.css  chat.js
