[project]
name = "wap-poc-py"
version = "0.1.0"
description = "WordPress AI Platform - Python/LangGraph backend"
requires-python = ">=3.12"
dependencies = [
    # Cap below 0.137: that release reworked routing to keep included routers as
    # `_IncludedRouter` entries in app.routes, which prometheus-fastapi-instrumentator
    # (<=8.0.0) can't resolve (AttributeError: '_IncludedRouter' has no attribute
    # 'path'), 500-ing every request. Lift the cap once the instrumentator supports it.
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "langgraph>=0.2",
    # Base langchain is required by langfuse.langchain.CallbackHandler (the
    # observability integration); the langchain-* packages alone don't provide it.
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-core>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[asyncio]>=5.2",
    "cryptography>=44",
    "python-dotenv>=1.0",
    "langfuse>=3.0",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    # Observability
    "sentry-sdk[fastapi,sqlalchemy]>=2.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pylint>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",  # for FastAPI TestClient async
    "respx>=0.21",  # HTTP mock for httpx
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E501"]

[tool.pylint.main]
py-version = "3.12"
jobs = 0  # auto-detect CPU count

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6

[tool.pylint.messages_control]
# Disable rules handled by ruff (E/F/I) or too noisy for a POC
disable = [
    "C0114",  # missing-module-docstring  (ruff handles style)
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods   (dataclasses, service stubs)
    "W0511",  # fixme                    (TODOs are intentional)
]

[tool.mypy]
python_version = "3.12"
strict = false
# Targeted checks — tighten incrementally
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true

# Third-party stubs not yet available
[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langchain_mcp_adapters.*",
    "langgraph.*",
    "asyncpg.*",
    "psycopg.*",
    "psycopg_pool.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
